Added another radio.

--- a/app/src/main/res/layout/radiom_fragment.xml
+++ b/app/src/main/res/layout/radiom_fragment.xml
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity$PlaceholderFragment"
+    android:id="@+id/main">
 
     <Button
         android:layout_width="wrap_content"
@@ -10,47 +12,59 @@
         android:text="Play"
         android:id="@+id/playBtn"
         android:onClick="playStream"
-        android:background="@drawable/button_rzk_shape"
-        android:textColor="#ffffff"
+        android:background="@drawable/radiom_shape_button"
+        android:textColor="#ffffffff"
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="5"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="76dp" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text=""
         android:id="@+id/trackTitle"
         android:layout_marginBottom="41dp"
+        android:layout_above="@+id/playBtn"
+        android:layout_centerHorizontal="true"
         android:textColor="#ffffffff"
-        android:background="@drawable/textview_rzk_shape"
+        android:background="@drawable/textview_radiom_shape"
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
         android:paddingRight="5dp"
         android:paddingBottom="5dp"
         android:padding="5dp"
         android:textStyle="bold"
-        android:layout_above="@+id/playBtn"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="0dp"
         android:minHeight="30pt"
         android:maxWidth="120pt"
         android:minWidth="120pt"
-        android:maxHeight="30pt" />
+        android:maxHeight="30pt"  />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="RZK"
+        android:text=""
+        android:id="@+id/trackArtist"
+        android:textStyle="bold"
+        android:layout_above="@+id/trackTitle"
+        android:layout_centerHorizontal="true"
+        android:background="#DA2421"
+        android:textColor="#ffffffff" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/title_section6"
         android:id="@+id/radioName"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
-        android:textColor="#ffe82532"
+        android:textColor="#DA2421"
         android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
