--- a/app/src/main/res/layout/urban_fragment.xml
+++ b/app/src/main/res/layout/urban_fragment.xml
@@ -30,7 +30,7 @@
         android:layout_above="@+id/playBtn"
         android:layout_centerHorizontal="true"
         android:textColor="#ffffffff"
-        android:background="@drawable/textviewurbanshape"
+        android:background="@drawable/textview_urban_shape"
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
         android:paddingRight="5dp"
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Urban Space Radio"
+        android:text="@string/title_section2"
         android:id="@+id/radioName"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
