--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
          space available using match_parent in both dimensions. -->
     <FrameLayout android:id="@+id/frame_container"
         android:layout_width="match_parent"
-        tools:context="com.example.taras.FTA.MainActivity"
+        tools:context=".MainActivity"
         android:layout_height="match_parent" />
 
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
