--- a/app/src/main/res/layout/rzk_fragment.xml
+++ b/app/src/main/res/layout/rzk_fragment.xml
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_alignParentTop="true"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    style="@style/AppTheme.NoActionBar">
 
     <Button
         android:layout_width="wrap_content"
