--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -38,5 +38,36 @@
         android:textOff="Alarm Off"
         android:onClick="onSetAlarmClick"
         />
+    <Spinner
+        android:layout_below="@id/setAlarm"
+        android:id="@+id/radioList"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:spinnerMode="dialog"
+        android:layout_centerVertical="true"
+        >
+
+    </Spinner>
+    <LinearLayout
+        android:layout_below="@id/radioList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:weightSum="1">
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:text="Cancel"
+            android:layout_weight="0.50"
+            android:id="@+id/cancelButton"
+            android:onClick="cancelChanges"/>
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:text="OK"
+            android:layout_weight="0.50"
+            android:id="@+id/submitButton"
+            android:onClick="submitChanges"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
