--- a/app/src/main/res/layout/christmas_fragment.xml
+++ b/app/src/main/res/layout/christmas_fragment.xml
@@ -6,6 +6,19 @@
     tools:context=".MainActivity$PlaceholderFragment"
     android:id="@+id/main">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:id="@+id/bgView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:scaleType="centerCrop"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:drawingCacheQuality="high"
+        />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
