--- a/app/src/main/res/layout/kredens_fragment.xml
+++ b/app/src/main/res/layout/kredens_fragment.xml
@@ -1,10 +1,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity$PlaceholderFragment"
     android:id="@+id/main">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:id="@+id/bgView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:scaleType="centerCrop"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:drawingCacheQuality="high"
+        />
 
     <Button
         android:layout_width="wrap_content"
