--- a/app/src/main/res/drawable/btn_pressed.xml
+++ b/app/src/main/res/drawable/btn_pressed.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+    <item android:width="200dp" android:height="200dp">
         <shape
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:innerRadius="0dp"
