--- a/app/src/main/res/layout/rzk_fragment.xml
+++ b/app/src/main/res/layout/rzk_fragment.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_alignParentTop="true"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    style="@style/AppTheme.NoActionBar">
+    style="@style/AppTheme.NoActionBar"
+    android:background="@android:color/darker_gray">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -38,19 +39,16 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/trackTitle"
+        android:text=""
         android:fontFamily="sans-serif"
         android:textColor="#ffffffff"
         android:textAlignment="center"
-        android:paddingLeft="5dp"
-        android:paddingTop="5dp"
-        android:paddingRight="5dp"
-        android:paddingBottom="5dp"
-        android:padding="5dp"
         android:minHeight="30pt"
         android:maxWidth="120pt"
         android:minWidth="120pt"
         android:maxHeight="30pt"
         android:layout_below="@+id/playBtn"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp" />
 
 </RelativeLayout>
