--- a/app/src/main/res/drawable/btn_pressed.xml
+++ b/app/src/main/res/drawable/btn_pressed.xml
@@ -1,36 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:width="200dp" android:height="200dp">
-        <shape
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:innerRadius="0dp"
-            android:shape="ring"
-            android:thicknessRatio="2"
-            android:useLevel="false" >
-            <solid android:color="@android:color/transparent" />
-            <stroke
-                android:width="5dp"
-                android:color="#dcffffff" />
-        </shape>
-    </item>
-    <item android:top="40dp" android:left="40dp"  android:bottom="40dp" android:right="110dp" >
-        <shape xmlns:android="http://schemas.android.com/apk/res/android"
-            android:shape="rectangle"
-            android:useLevel="false" >
-            <solid android:color="#dcffffff" />
-            <corners
-                android:radius="25dp" />
-        </shape>
-    </item>
-    <item android:top="40dp" android:left="110dp" android:bottom="40dp" android:right="40dp" >
-        <shape xmlns:android="http://schemas.android.com/apk/res/android"
-            android:shape="rectangle"
-            android:useLevel="false" >
-            <solid android:color="#dcffffff" />
-            <corners
-                android:radius="25dp" />
-        </shape>
+    <item>
+        <bitmap android:src="@drawable/btn_pressed" />
     </item>
 </layer-list>
-
-
