--- a/app/src/main/res/layout/radio_fragment.xml
+++ b/app/src/main/res/layout/radio_fragment.xml
@@ -26,8 +26,9 @@
         android:textColor="#ffffff"
         android:shadowDx="0"
         android:shadowDy="0"
+        android:minHeight="80pt"
+        android:minWidth="80pt"
         android:shadowRadius="5"
-        android:layout_marginTop="70dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_gravity="center_vertical|center_horizontal"/>
